<resources>
    <string name="app_name">AndroidCartServer</string>
    <string name="we_transport_products_to_customers_as_quickly_as_our_ex_betrays">We transport products to customers as quickly as our ex betrays</string>
    <string name="signup">Signup</string>
    <string name="signin">SignIn</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tracking_order">TrackingOrder</string>
    <string name="_1974">1974</string>
    <string name="password">Password</string>
    <string name="_7236">7236</string>
    <string name="phone_number">Phone Number</string>
    <string name="upload">UPLOAD</string>
    <string name="vgkh">Name</string>
    <string name="kvhkgiu">SELECT</string>
    <string name="gykhtftd">UPLOAD</string>
    <string name="khgsey">Welcome to FoodCart</string>
    <string name="hrithik">Hrithik</string>
    <string name="LKJHGF">Address</string>
    <string name="_123456789">123456789</string>
    <string name="status">Status</string>
    <string name="_111111">#111111</string>
</resources>
