<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/jug"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="350dp"
            android:padding="10dp"
            android:layout_height="300dp"
           android:src="@drawable/skyne"/>


        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/txtSlogan"
            android:textColor="@android:color/white"
           android:text="@string/we_transport_products_to_customers_as_quickly_as_our_ex_betrays"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">


        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/black"
            android:background="@color/btnsignup"
            android:layout_margin="8dp"
            android:id="@+id/btnsignup"
            android:layout_height="wrap_content" />


        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/signin"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/black"
            android:background="@color/btnactive"
            android:layout_margin="8dp"
            android:id="@+id/btnsignin"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>