<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    app:cardElevation="4dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vgkh"
            android:id="@+id/editname"
            android:textSize="34sp"
            android:inputType="text"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"
            app:met_floatingLabel="highlight"
            android:textColor="@color/colorPrimary"
            app:met_baseColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/kvhkgiu"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/black"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:id="@+id/btnselect"
                android:layout_height="wrap_content"
                tools:ignore="ObsoleteLayoutParam" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/gykhtftd"
                android:textAllCaps="false"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/black"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:id="@+id/btnupload"
                android:layout_height="wrap_content"
                tools:ignore="ObsoleteLayoutParam" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>