<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/_111111"
                    android:id="@+id/order_id"
                    android:layout_marginLeft="10dp"
                    tools:ignore="RtlHardcoded" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="Order Date"
                    android:id="@+id/order_date"
                    android:layout_marginLeft="10dp"
                    tools:ignore="RtlHardcoded" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="@string/status"
                    android:id="@+id/order_status"
                    android:layout_marginLeft="10dp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="@string/_123456789"
                    android:id="@+id/order_phone"
                    android:layout_marginLeft="10dp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="@string/LKJHGF"
                    android:id="@+id/order_address"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="edit"
                android:background="@android:color/white"
                android:layout_weight="1"
                android:id="@+id/btnedt"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="remove"
                android:background="@android:color/white"
                android:layout_weight="1"
                android:id="@+id/btnremove"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="detail"
                android:background="@android:color/white"
                android:layout_weight="1"
                android:id="@+id/btndetail"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="direction"
                android:background="@android:color/white"
                android:layout_weight="1"
                android:id="@+id/btndirection"
                />


        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>